--- a/jua/style.css
+++ b/jua/style.css
@@ -4,7 +4,9 @@
 }
 
 body{
-    display: flex;
+    width: 100%;
+    height: 100%;
+
 }
 
 .heade {
@@ -13,7 +15,7 @@ body{
     height: 40px;
     color:white;
     font-size: 12px;
-    
+
 }
 
 .heade .parrafo{
@@ -25,8 +27,8 @@ body{
     font-size: 13px;
     margin-left: 105rem;
     margin-bottom: 100px;
-    
-    
+
+
 }
 
 .cabeza {
@@ -46,9 +48,9 @@ body{
     height: 65px;
     background-color: rgb(238, 234, 229);
     display: flex;
-   
-    
-   
+
+
+
 }
 
 .naveg{
@@ -62,7 +64,7 @@ nav {
     display: flex;
 }
 
-img {
+.naveg img {
     height: 20px;
     width: 21px;
     margin-left: 21px;
@@ -92,67 +94,108 @@ a {
     text-decoration: none;
 }
 
-
-.heade .parrafo {
-    font-size: 14px;
+.heade{
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+}
+.cabeza .heade .parrafo {
+    font-size: 13px;
     margin-left: 700px;
-    
+    margin-top: 10px;
+    top: 10rem;
+
+}
+
+.pers .lol{
+    width: 100%;
+    height: 663px;
+    background-color: #F2F0F1;
+    background-image: url(./Rectangle\ 2.png);
+    background-repeat: no-repeat;
+    background-position-x: 320px;
 }
 
 
-
-article{
+.lol .containt{
     display: flex;
-}
-
-.office .left{
-    display: flex;
-    width: 50%;
-    height: 580px;
-    background-color: rgba(128, 128, 128, 0.251);
-}
-
-.left button{
-    height: 30px;
-    width: 70px;
-    margin-top: 100px;
-}
-
-
-.left .titulo{
-    font-size: 40px;
-    margin-left: 70px;
-    
-}
-
-.left .text{
-    margin-top: 350px;
-    margin-left: 20px;
+    width: 597px;
+    height: 66px;
+    top: 607px;
+    margin-left: 196px;
+    margin-top: 30px;
     font-size: 19px;
+    gap: 22px;
+}
+
+.find {
+  width: 356px;
+  font-family: 'Lilita One';
+  font-weight: 400px;
+  font-size: 64px;
+  font-style: normal;
+}
+
+.lol .find{
+    width: 710px;
+}
+
+.pers .lol .find{
+    margin-left: 190px;
+}
+
+
+.lol .text{
+    width: 505px;
+    height: 33px;
+    margin-left: 196px;
+    margin-top: 10px;
+
+}
+
+
+.text {
+  font-family: 'Ubuntu';
+
+  font-style: normal;
+  font-size: 18px;
+
+}
+
+.lol .now{
+width: 210;
+height: 52;
+top: 507px;
+left: 100px;
+opacity: 1;
+border-radius: 62px;
+padding-top: 16px;
+padding-right: 54px;
+padding-bottom: 16px;
+padding-left: 54px;
+gap: 12px;
+margin-top: 51px;
+margin-left: 190px;
+background-color: black;
+color: white;
+font-size: 15.5px;
+}
+
+.containt .star{
+    font-size: 10px ;
+    margin-right: 50rem;
+}
+
+.lol .vec{
+    position: absolute;
+    margin-left: 800px;
+    margin-top: -270px;
+}
+
+.lol .tor{
+    position: absolute;
+    margin-left: 1480px;
+    margin-top: -450px;
     
-}
-
-.left .dos{
-    margin-right: 30px;
-    margin-top: 310px;
-}
-
-.left .veinte{
-    margin-top: 310px;
-    
-}
-
-.left .treinta{
-    margin-top: 310px;
-    padding-right: 5rem;
-    padding-left: 2rem;
-
-.right{
-    display: flex;
-}
-
-.right .una{
-    width: 100px;
-    height: 575px;
-
 }
